force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Active_Change__c.field-meta.xml
<CustomField>
    <fullName>Active_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Change</label>
    <type>Checkbox</type>
</CustomField>