force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Actual_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Change__c</fullName>
    <label>Actual Date Change</label>
    <type>Date</type>
</CustomField>