force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Amount_Type_Change__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type_Change__c</fullName>
    <label>Amount Type Change</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Change__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FIXED AMOUNT</fullName>
            </value>
            <value>
                <fullName>LAST BILLED AMOUNT</fullName>
            </value>
            <value>
                <fullName>CURRENT PAYMENT AMOUNT</fullName>
            </value>
            <value>
                <fullName>OLDEST UNPAID BILL AMOUNT</fullName>
            </value>
            <value>
                <fullName>TOTAL OUTSTANDING BILL AMOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>