force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Amount_Type_Split_Factor_Change__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type_Split_Factor_Change__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Amount Type Split Factor Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>