force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Debit_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Debit_Date_Change__c</fullName>
    <label>Debit Date Change</label>
    <type>Date</type>
</CustomField>