force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Debit_Day_Change__c.field-meta.xml
<CustomField>
    <fullName>Debit_Day_Change__c</fullName>
    <label>Debit Day Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>