force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Frequency_Change__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Change__c</fullName>
    <label>Frequency Change</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Change__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly-PD</fullName>
            </value>
            <value>
                <fullName>Billing Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>