force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Manually_Updated_and_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manually_Updated_and_Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Updated and Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>