force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Transaction_Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount_Change__c</fullName>
    <label>Transaction Amount Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>