force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/Type_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_Change__c</fullName>
    <label>Type Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RECURRING</fullName>
            </value>
            <value>
                <fullName>ONE TIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>