force-app/main/default/objects/loan__Automated_Payment_Setup__c/recordTypes/Lock_Approval_Record.recordType-meta.xml
<RecordType>
    <fullName>Lock_Approval_Record</fullName>
    <active>true</active>
    <label>Lock Approval Record</label>
</RecordType>