force-app/main/default/objects/loan__Automated_Payment_Setup__c/recordTypes/New_APS_Record.recordType-meta.xml
<RecordType>
    <fullName>New_APS_Record</fullName>
    <active>true</active>
    <label>New APS Record</label>
</RecordType>