force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Account_Type_Change_Fixed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Change_Fixed</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF( ISNEW()== false &amp;&amp; ISPICKVAL( Amount_Type_Change__c , &quot;Fixed Amount&quot;) &amp;&amp;  (  Amount_Type_Split_Factor_Change__c  &gt; 1 ), true,false ))</errorConditionFormula>
    <errorMessage>If Amount type Change = Fixed then amount type split change factor can only be 1</errorMessage>
</ValidationRule>