force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Amount_Type_Cannot_be_Null_For_Recurring.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Type_Cannot_be_Null_For_Recurring</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(  loan__Type__c , &apos;RECURRING&apos;)  &amp;&amp;  (ISBLANK( TEXT( loan__Amount_Type__c ) )  ||  ISNULL( TEXT( loan__Amount_Type__c ) ) ),True, False)</errorConditionFormula>
    <errorMessage>Amount Type must not be null</errorMessage>
</ValidationRule>