force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Amount_Type_Split_Factor_Change_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Type_Split_Factor_Change_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF(ISNEW()== false &amp;&amp; Amount_Type_Split_Factor_Change__c &lt;= 0, true,false ))</errorConditionFormula>
    <errorMessage>Amount Type Split Factor Change should be &gt; 0</errorMessage>
</ValidationRule>