force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/APS_Active_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>APS_Active_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Login User&apos; || $Profile.Name == &apos;Customer Community Login User&apos; ,false,IF( ( ISNEW()== true &amp;&amp; Created_after_conversion__c == false &amp;&amp;  loan__Active__c == true),true,false))</errorConditionFormula>
    <errorDisplayField>loan__Active__c</errorDisplayField>
    <errorMessage>APS can&apos;t be Active</errorMessage>
</ValidationRule>