force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/biweekly_frequency_change.validationRule-meta.xml
<ValidationRule>
    <fullName>biweekly_frequency_change</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF( AND(ISPICKVAL(  Frequency_Change__c , &apos;bi-weekly&apos;), ISPICKVAL(  Amount_Type_Change__c , &apos;last billed amount&apos;))
 &amp;&amp; ISNEW() == false, true,false ))</errorConditionFormula>
    <errorMessage>To change billing frequency to bi-weekly the loan amount type change must be fixed or current payment amount</errorMessage>
</ValidationRule>