force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Debit_Day_Change_must_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Debit_Day_Change_must_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF(ISNEW()== false &amp;&amp; Debit_Day_Change__c == NULL &amp;&amp; ISPICKVAL( Type_Change__c , &apos;RECURRING&apos;), true,false ))</errorConditionFormula>
    <errorMessage>Debit Day change must not be null.</errorMessage>
</ValidationRule>