force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Frequency_Change_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Frequency_Change_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF(AND(ISNEW()== false, ISPICKVAL( Type_Change__c ,&apos;RECURRING&apos;) , OR( ISNULL( TEXT( Frequency_Change__c ) ) , ISBLANK( TEXT(Frequency_Change__c ) ))), true,false ))</errorConditionFormula>
    <errorMessage>Frequency Change can not be null for &apos;Recurring&apos; type.</errorMessage>
</ValidationRule>