force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Non_Weekend_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Weekend_Change</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Plus User&apos; || $Profile.Name == &apos;Customer Community Plus User&apos; ,false, IF( CASE( MOD(  Debit_Date_Change__c - DATE(1900, 1, 7), 7), 0, 0, 6, 0, 1) = 0  &amp;&amp;  ISNEW() == false, true,false ))</errorConditionFormula>
    <errorMessage>Debit date Change can not be a weekend</errorMessage>
</ValidationRule>