force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Transaction_Amount_Change_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_Change_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Login User&apos; || $Profile.Name == &apos;Customer Community Login User&apos; ,false, IF(AND(ISNEW()== false, ISPICKVAL(Type_Change__c ,&quot;ONE TIME&quot;),ISBLANK(  Transaction_Amount_Change__c )), true,false ))</errorConditionFormula>
    <errorDisplayField>Transaction_Amount_Change__c</errorDisplayField>
    <errorMessage>Transaction Amount Change can not be null for &apos;One Time&apos; type.</errorMessage>
</ValidationRule>