force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Transaction_Amount_Change_Fixed_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_Change_Fixed_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Login User&apos; || $Profile.Name == &apos;Customer Community Login User&apos; ,false, IF(AND(ISNEW()== false, ISPICKVAL( Amount_Type_Change__c ,&quot;Fixed Amount&quot;),ISBLANK( Transaction_Amount_Change__c )), true,false ))</errorConditionFormula>
    <errorMessage>Transaction Amount Change can not be null for Fixed Amount type.</errorMessage>
</ValidationRule>