force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Transaction_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( loan__Type__c ,&quot;ONE TIME&quot;)  &amp;&amp;  ISBLANK( loan__Transaction_Amount__c )</errorConditionFormula>
    <errorDisplayField>loan__Transaction_Amount__c</errorDisplayField>
    <errorMessage>Transaction Amount can not be null for &apos;One Time&apos; type.</errorMessage>
</ValidationRule>