force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Transaction_Amount_For_Fixed_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_For_Fixed_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( loan__Amount_Type__c , &quot;Fixed Amount&quot;) &amp;&amp;  ISBLANK( loan__Transaction_Amount__c )</errorConditionFormula>
    <errorMessage>Transaction Amount can not be null for Fixed Amount Type</errorMessage>
</ValidationRule>