force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Type_Change_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Change_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &apos;Orde Customer Community Login User&apos; || $Profile.Name == &apos;Customer Community Login User&apos; ,false,  IF( AND(ISNEW()== false ,OR( ISBLANK( TEXT( Type_Change__c ) ), ISNULL( TEXT( Type_Change__c )))), true,false ))</errorConditionFormula>
    <errorMessage>Type Change must not be null.</errorMessage>
</ValidationRule>